--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moon Phase Game</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
 	<div class="wrapper">
@@ -17,7 +17,7 @@
 	    <div id="game-controls">
 		    <button id="reset-button">Reset Game</button>
 	    </div>
-	    <script src="script.js"></script>
+	     <script src="{{ url_for('static', filename='script.js') }}"></script>
 	</div>
 </body>
 </html>
