trying to add scoring

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -12,6 +12,12 @@
 	<div class="wrapper">
 	    <h1>Moon Phase Game</h1>
 	    <div id="turn-indicator">Player 1's turn</div>
+	    <!--
+	    <div id="scoreboard">
+		    <p>Player 1 Score: <span id="player1-score">0</span></p>
+		    <p>Player 2 Score: <span id="player2-score">0</span></p>
+	    </div>
+	    -->
 	    <div id="game-board" class="board"></div>
 	    <div id="phase-buttons"></div>
 	    <div id="game-controls">
