points are updating on the website, they're just wrong

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -18,6 +18,15 @@
 		    <p>Player 2 Score: <span id="player2-score">0</span></p>
 	    </div>
 	    -->
+	<div id="scoreboard">
+	    <div id="player1-score">
+		Player 1: <span id="player1-points">0</span> points
+	    </div>
+	    <div id="player2-score">
+		Player 2: <span id="player2-points">0</span> points
+	    </div>
+	</div>
+
 	    <div id="game-board" class="board"></div>
 	    <div id="phase-buttons"></div>
 	    <div id="game-controls">
