--- a/website/static/style.css
+++ b/website/static/style.css
@@ -69,3 +69,15 @@ body {
     background-color: lightblue;
 }
 
+#scoreboard {
+    font-size: 18px;
+    font-weight: bold;
+    margin: 10px;
+    display: flex;
+    justify-content: space-between;
+}
+
+#player1-score, #player2-score {
+    padding: 10px;
+}
+
