--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -32,6 +32,7 @@
 	    <div id="game-controls">
 		    <button id="reset-button">Reset Game</button>
 	    </div>
+	    <div id="final-scores" style="display: none; margin-top: 20px;"></div>
 	     <script src="{{ url_for('static', filename='script.js') }}"></script>
 	</div>
 </body>
