Added connection lines and dots for phase and full moon pairs

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -27,7 +27,10 @@
 	    </div>
 	</div>
 
-	    <div id="game-board" class="board"></div>
+	    <div id="game-board" class="board">
+                <canvas id="connections-canvas"></canvas> 
+            </div>
+
 	    <div id="phase-buttons"></div>
 	    <div id="game-controls">
 		    <button id="reset-button">Reset Game</button>
