working on undo redo

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -26,6 +26,9 @@
 		Player 2: <span id="player2-points">0</span> points
 	    </div>
 	</div>
+	
+	<button onclick="undoMove()">Undo</button>
+        <button onclick="redoMove()">Redo</button>
 
 	    <div id="game-board" class="board">
                 <canvas id="connections-canvas"></canvas> 
