added disable animations button

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -29,6 +29,8 @@
 	
 	<button onclick="undoMove()">Undo</button>
         <button onclick="redoMove()">Redo</button>
+	<button id="toggle-animations-button">Disable Animations</button>
+
 
 	    <div id="game-board" class="board">
                 <canvas id="connections-canvas"></canvas> 
