Added hands and reduce UI flashing

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -44,8 +44,17 @@
 	    <div id="game-board" class="board">
                 <canvas id="connections-canvas"></canvas> 
             </div>
+	    <div id="debug-hands" style="margin-top: 1em;">
+              <div><strong>Player 1 hand (debug):</strong> <span id="player1-hand-debug"></span></div>
+              <div><strong>Player 2 hand (debug):</strong> <span id="player2-hand-debug"></span></div>
+	    </div>
 
-	    <div id="phase-buttons"></div>
+            <div id="phase-buttons-player1"></div>
+            <div id="phase-buttons-player2"></div>
+
+
+
+	    <!--	    <div id="phase-buttons"></div>  -->
 	    <div id="game-controls">
 		    <button id="reset-button">Reset Game</button>
 	    </div>
