hide labels, add player id to url

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -41,7 +41,7 @@
 
 
 
-	   <div id="game-board" class="board">
+	   <div id="game-board" class="board hide-labels">
               <canvas id="bold-connections-canvas"></canvas>
               <canvas id="connections-canvas"></canvas> 
           </div>
