--- a/website/templates/landing.html
+++ b/website/templates/landing.html
@@ -38,6 +38,7 @@
   <h1>🌙 Moon Game</h1>
 
   <button onclick="startNewGame()">Start New Game</button>
+  <button onclick="window.location.href='/graph_builder'">Make a Custom Board</button>
 
   <!--
   <h3>Or join an existing room</h3>
@@ -105,7 +106,7 @@
     </div>
   </details>
   <p style="margin-top:20px;">
-    🌙 Curious? <a href="https://www.google.com/doodle/rise-of-the-half-moon" target="_blank">Try Google's original Moon Game Doodle here!</a>
+  🌙 The original <a href="https://www.google.com/doodle/rise-of-the-half-moon" target="_blank">Try Google's original Moon Game Doodle here!</a>
   </p>
 </div>
 
